--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -30,12 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7bc63035-9187-4bea-bf8a-46498f0377e0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def dotProd(v1, v2): # Define our function and arguments\n",
     "    if len(v1) is len(v2): # Test equality of vector length\n",
@@ -129,12 +140,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9ce1941e-8b57-4d31-99d6-a1dbd70fac8b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[16], [38]]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def matMul(a, b): # Define function, take 2 matrices\n",
     "    for i in range(len(a)): # Make sure a is matrix\n",
@@ -212,10 +234,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7c0c3c30-45dc-49d2-9074-5c4e1b15042c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np # import library as np object\n",
     "\n",
@@ -234,10 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5fe1b172-8270-46f4-86e0-f7984f39ee95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.shape"
    ]
@@ -260,39 +304,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e540cddb-1987-4c87-9da9-0e58a396b7a9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array([1,2,3,4]) # Specify each element"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ba7a850e-5be8-45d7-a491-0c27af1b55c4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.zeros((3,3)) # Generate 3 x 3 array of zeros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "0d47ddb0-74c6-4ff2-bcb1-137ff2e3c03b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.eye(3) # Generate 3 x 3 identity matrix"
    ]
@@ -753,12 +834,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m         Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n",
+      "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m stats\n",
+      "\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mRegressionModel\u001b[39;00m:\n",
+      "\u001b[1;32m      8\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n",
+      "\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    A minimal regression helper class that computes the primary OLS table\u001b[39;00m\n",
+      "\u001b[1;32m     10\u001b[0m \u001b[38;5;124;03m    (coefficient, standard error, t-stat, p-value) for y ~ X.\u001b[39;00m\n",
+      "\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
+      "\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
+     ]
+    }
+   ],
    "source": [
-    "#si-exercise"
+    "#si-exercise\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "class RegressionModel:\n",
+    "    \"\"\"\n",
+    "    A minimal regression helper class that computes the primary OLS table\n",
+    "    (coefficient, standard error, t-stat, p-value) for y ~ X.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame | pd.Series,\n",
+    "                 create_intercept: bool = True, regression_type: str = \"ols\"):\n",
+    "        # store original data\n",
+    "        if isinstance(y, pd.DataFrame):\n",
+    "            if y.shape[1] != 1:\n",
+    "                raise ValueError(\"y must have exactly one column.\")\n",
+    "            self.y = y.iloc[:, 0]  # store as Series for convenience\n",
+    "        else:\n",
+    "            self.y = y\n",
+    "\n",
+    "        if not isinstance(x, pd.DataFrame):\n",
+    "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
+    "        self.x = x.copy()\n",
+    "\n",
+    "        # config\n",
+    "        self.create_intercept = bool(create_intercept)\n",
+    "        self.regression_type = str(regression_type).lower()\n",
+    "\n",
+    "        # container for results\n",
+    "        self.results: dict[str, dict[str, float]] = {}\n",
+    "\n",
+    "        # add intercept if requested\n",
+    "        if self.create_intercept:\n",
+    "            self.add_intercept()\n",
+    "\n",
+    "    # method to add a column of ones named 'intercept'\n",
+    "    def add_intercept(self):\n",
+    "        if \"intercept\" not in self.x.columns:\n",
+    "            self.x.insert(0, \"intercept\", 1.0)\n",
+    "        return self\n",
+    "\n",
+    "    # core OLS estimation\n",
+    "    def ols_regression(self):\n",
+    "        if self.regression_type != \"ols\":\n",
+    "            if self.regression_type == \"logit\":\n",
+    "                # explicitly out of scope this week per prompt\n",
+    "                raise NotImplementedError(\"Logit not required this week.\")\n",
+    "            else:\n",
+    "                raise ValueError(\"regression_type must be 'ols' (or 'logit' stub).\")\n",
+    "\n",
+    "        # design matrices\n",
+    "        X = self.x.to_numpy(dtype=float)  # (n, k)\n",
+    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
+    "\n",
+    "        n, k = X.shape\n",
+    "        if y.shape[0] != n:\n",
+    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
+    "\n",
+    "        # (X'X)^(-1) X'y\n",
+    "        XtX = X.T @ X\n",
+    "        XtX_inv = np.linalg.inv(XtX)\n",
+    "        beta = XtX_inv @ (X.T @ y)  # (k, 1)\n",
+    "\n",
+    "        # residuals and sigma^2 with dof = n - k\n",
+    "        y_hat = X @ beta\n",
+    "        resid = y - y_hat\n",
+    "        dof = n - k\n",
+    "        if dof <= 0:\n",
+    "            raise ValueError(\"Not enough degrees of freedom (n must be > number of columns in x).\")\n",
+    "        sigma2 = float((resid.T @ resid) / dof)\n",
+    "\n",
+    "        # standard errors, t-stats, p-values\n",
+    "        var_beta = sigma2 * XtX_inv\n",
+    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)  # (k, 1)\n",
+    "\n",
+    "        # avoid division by zero\n",
+    "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
+    "            t_stats = (beta / se)\n",
+    "        t_stats = t_stats.flatten()\n",
+    "\n",
+    "        # two-sided p-values from Student-t with dof\n",
+    "        p_vals = 2 * stats.t.sf(np.abs(t_stats), df=dof)\n",
+    "\n",
+    "        # stash in results as specified: results[varname] = {coefficient, standard_error, t_stat, p_value}\n",
+    "        self.results = {}\n",
+    "        for i, col in enumerate(self.x.columns):\n",
+    "            self.results[col] = {\n",
+    "                \"coefficient\": float(beta[i, 0]),\n",
+    "                \"standard_error\": float(se[i, 0]),\n",
+    "                \"t_stat\": float(t_stats[i]),\n",
+    "                \"p_value\": float(p_vals[i]),\n",
+    "            }\n",
+    "        return self\n",
+    "\n",
+    "    # summary table in required column order\n",
+    "    def summary(self) -> pd.DataFrame:\n",
+    "        if not self.results:\n",
+    "            # run OLS automatically if not yet run\n",
+    "            self.ols_regression()\n",
+    "\n",
+    "        rows = []\n",
+    "        for var in self.x.columns:  # preserve order, including 'intercept' if present\n",
+    "            r = self.results[var]\n",
+    "            rows.append(\n",
+    "                {\n",
+    "                    \"Variable name\": var,\n",
+    "                    \"coefficient value\": r[\"coefficient\"],\n",
+    "                    \"standard error\": r[\"standard_error\"],\n",
+    "                    \"t-statistic\": r[\"t_stat\"],\n",
+    "                    \"p-value\": r[\"p_value\"],\n",
+    "                }\n",
+    "            )\n",
+    "        return pd.DataFrame(rows)\n"
    ]
   }
  ],
@@ -769,16 +984,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "name": "python"
   }
  },
  "nbformat": 4,
