--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,8 @@
     "                    \"p-value\": r[\"p_value\"],\n",
     "                }\n",
     "            )\n",
-    "        return pd.DataFrame(rows)\n"
+    "        return pd.DataFrame(rows)\n",
+    "        print\n"
    ]
   }
  ],
