--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [
@@ -843,17 +843,14 @@
      "evalue": "No module named 'scipy'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m         Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n",
       "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
       "\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
       "\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m stats\n",
-      "\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mRegressionModel\u001b[39;00m:\n",
-      "\u001b[1;32m      8\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n",
-      "\u001b[1;32m      9\u001b[0m \u001b[38;5;124;03m    A minimal regression helper class that computes the primary OLS table\u001b[39;00m\n",
-      "\u001b[1;32m     10\u001b[0m \u001b[38;5;124;03m    (coefficient, standard error, t-stat, p-value) for y ~ X.\u001b[39;00m\n",
-      "\u001b[1;32m     11\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Dict\n",
+      "\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mRegressionModel\u001b[39;00m:\n",
       "\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
      ]
@@ -865,116 +862,117 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy import stats\n",
+    "from typing import Dict\n",
     "\n",
     "class RegressionModel:\n",
     "    \"\"\"\n",
-    "    A minimal regression helper class that computes the primary OLS table\n",
-    "    (coefficient, standard error, t-stat, p-value) for y ~ X.\n",
+    "    Computes the OLS table (coef, std err, t, p) for y ~ X.\n",
+    "    Matches the required API: __init__(x, y, create_intercept, regression_type),\n",
+    "    .add_intercept(), .ols_regression(), and .summary().\n",
+    "    Stores x and y as attributes, and results as specified.\n",
     "    \"\"\"\n",
-    "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame | pd.Series,\n",
-    "                 create_intercept: bool = True, regression_type: str = \"ols\"):\n",
-    "        # store original data\n",
+    "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+    "        # validate/store y\n",
     "        if isinstance(y, pd.DataFrame):\n",
     "            if y.shape[1] != 1:\n",
     "                raise ValueError(\"y must have exactly one column.\")\n",
-    "            self.y = y.iloc[:, 0]  # store as Series for convenience\n",
+    "            self.y = y.iloc[:, 0]  # store as Series\n",
     "        else:\n",
-    "            self.y = y\n",
+    "            self.y = y  # assume Series-like\n",
     "\n",
+    "        # validate/store X\n",
     "        if not isinstance(x, pd.DataFrame):\n",
     "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
     "        self.x = x.copy()\n",
     "\n",
-    "        # config\n",
     "        self.create_intercept = bool(create_intercept)\n",
     "        self.regression_type = str(regression_type).lower()\n",
     "\n",
     "        # container for results\n",
-    "        self.results: dict[str, dict[str, float]] = {}\n",
+    "        self.results = {}  # type: Dict[str, Dict[str, float]]\n",
     "\n",
     "        # add intercept if requested\n",
     "        if self.create_intercept:\n",
     "            self.add_intercept()\n",
     "\n",
-    "    # method to add a column of ones named 'intercept'\n",
     "    def add_intercept(self):\n",
+    "        \"\"\"Add a column of ones named 'intercept' to self.x if missing.\"\"\"\n",
     "        if \"intercept\" not in self.x.columns:\n",
     "            self.x.insert(0, \"intercept\", 1.0)\n",
-    "        return self\n",
     "\n",
-    "    # core OLS estimation\n",
     "    def ols_regression(self):\n",
+    "        \"\"\"Estimate OLS and populate self.results.\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
-    "                # explicitly out of scope this week per prompt\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
-    "            else:\n",
-    "                raise ValueError(\"regression_type must be 'ols' (or 'logit' stub).\")\n",
+    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
     "\n",
     "        # design matrices\n",
-    "        X = self.x.to_numpy(dtype=float)  # (n, k)\n",
-    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
+    "        X = self.x.to_numpy(dtype=float)     # (n, k)\n",
+    "        y = np.asarray(self.y, dtype=float).reshape(-1, 1)  # (n, 1)\n",
     "\n",
     "        n, k = X.shape\n",
     "        if y.shape[0] != n:\n",
     "            raise ValueError(\"x and y must have the same number of rows.\")\n",
+    "        if n <= k:\n",
+    "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
-    "        # (X'X)^(-1) X'y\n",
+    "        # OLS: beta = (X'X)^(-1) X'y\n",
     "        XtX = X.T @ X\n",
-    "        XtX_inv = np.linalg.inv(XtX)\n",
-    "        beta = XtX_inv @ (X.T @ y)  # (k, 1)\n",
+    "        # use inv; fall back to pinv for safety\n",
+    "        try:\n",
+    "            XtX_inv = np.linalg.inv(XtX)\n",
+    "        except np.linalg.LinAlgError:\n",
+    "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
-    "        # residuals and sigma^2 with dof = n - k\n",
+    "        beta = XtX_inv @ (X.T @ y)                      # (k, 1)\n",
     "        y_hat = X @ beta\n",
     "        resid = y - y_hat\n",
     "        dof = n - k\n",
-    "        if dof <= 0:\n",
-    "            raise ValueError(\"Not enough degrees of freedom (n must be > number of columns in x).\")\n",
-    "        sigma2 = float((resid.T @ resid) / dof)\n",
+    "        sigma2 = float((resid.T @ resid) / dof)         # unbiased estimator\n",
     "\n",
-    "        # standard errors, t-stats, p-values\n",
     "        var_beta = sigma2 * XtX_inv\n",
-    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)  # (k, 1)\n",
+    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)  # (k,1)\n",
     "\n",
-    "        # avoid division by zero\n",
+    "        # t-stats (guard against zero SE)\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
-    "            t_stats = (beta / se)\n",
-    "        t_stats = t_stats.flatten()\n",
-    "\n",
-    "        # two-sided p-values from Student-t with dof\n",
+    "            t_stats = (beta / se).flatten()\n",
     "        p_vals = 2 * stats.t.sf(np.abs(t_stats), df=dof)\n",
     "\n",
-    "        # stash in results as specified: results[varname] = {coefficient, standard_error, t_stat, p_value}\n",
-    "        self.results = {}\n",
+    "        # package results in required structure\n",
+    "        out = {}\n",
     "        for i, col in enumerate(self.x.columns):\n",
-    "            self.results[col] = {\n",
+    "            out[col] = {\n",
     "                \"coefficient\": float(beta[i, 0]),\n",
     "                \"standard_error\": float(se[i, 0]),\n",
     "                \"t_stat\": float(t_stats[i]),\n",
     "                \"p_value\": float(p_vals[i]),\n",
     "            }\n",
+    "        self.results = out\n",
     "        return self\n",
     "\n",
-    "    # summary table in required column order\n",
-    "    def summary(self) -> pd.DataFrame:\n",
+    "    def summary(self):\n",
+    "        \"\"\"\n",
+    "        Return a DataFrame with columns:\n",
+    "        'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'\n",
+    "        in that order, preserving column order of self.x.\n",
+    "        \"\"\"\n",
     "        if not self.results:\n",
-    "            # run OLS automatically if not yet run\n",
     "            self.ols_regression()\n",
     "\n",
     "        rows = []\n",
-    "        for var in self.x.columns:  # preserve order, including 'intercept' if present\n",
+    "        for var in self.x.columns:\n",
     "            r = self.results[var]\n",
-    "            rows.append(\n",
-    "                {\n",
-    "                    \"Variable name\": var,\n",
-    "                    \"coefficient value\": r[\"coefficient\"],\n",
-    "                    \"standard error\": r[\"standard_error\"],\n",
-    "                    \"t-statistic\": r[\"t_stat\"],\n",
-    "                    \"p-value\": r[\"p_value\"],\n",
-    "                }\n",
-    "            )\n",
+    "            rows.append({\n",
+    "                \"Variable name\": var,\n",
+    "                \"coefficient value\": r[\"coefficient\"],\n",
+    "                \"standard error\": r[\"standard_error\"],\n",
+    "                \"t-statistic\": r[\"t_stat\"],\n",
+    "                \"p-value\": r[\"p_value\"],\n",
+    "            })\n",
     "        return pd.DataFrame(rows)\n",
-    "        print\n"
+    "\n",
+    "       "
    ]
   }
  ],
