--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [
@@ -843,9 +843,9 @@
      "evalue": "No module named 'scipy'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n",
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m         Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[5], line 5\u001b[0m\n",
       "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
       "\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
       "\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m stats\n",
@@ -970,7 +970,7 @@
     "                \"t-statistic\": r[\"t_stat\"],\n",
     "                \"p-value\": r[\"p_value\"],\n",
     "            })\n",
-    "        return pd.DataFrame(rows)\n",
+    "        return pd.DataFrame\n",
     "\n",
     "       "
    ]
