--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,132 +834,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m         Traceback (most recent call last)\n",
-      "Cell \u001b[0;32mIn[5], line 5\u001b[0m\n",
-      "\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m stats\n",
-      "\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Dict\n",
-      "\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mRegressionModel\u001b[39;00m:\n",
-      "\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#si-exercise\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy import stats\n",
-    "from typing import Dict\n",
     "\n",
     "class RegressionModel:\n",
     "    \"\"\"\n",
-    "    Computes the OLS table (coef, std err, t, p) for y ~ X.\n",
-    "    Matches the required API: __init__(x, y, create_intercept, regression_type),\n",
-    "    .add_intercept(), .ols_regression(), and .summary().\n",
-    "    Stores x and y as attributes, and results as specified.\n",
+    "    Computes an OLS regression and produces a summary table with:\n",
+    "    coefficient, standard error, t-statistic, and p-value.\n",
+    "    Works without SciPy.\n",
     "    \"\"\"\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-    "        # validate/store y\n",
     "        if isinstance(y, pd.DataFrame):\n",
     "            if y.shape[1] != 1:\n",
     "                raise ValueError(\"y must have exactly one column.\")\n",
-    "            self.y = y.iloc[:, 0]  # store as Series\n",
+    "            self.y = y.iloc[:, 0]\n",
     "        else:\n",
-    "            self.y = y  # assume Series-like\n",
-    "\n",
-    "        # validate/store X\n",
+    "            self.y = y\n",
     "        if not isinstance(x, pd.DataFrame):\n",
     "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
     "        self.x = x.copy()\n",
-    "\n",
     "        self.create_intercept = bool(create_intercept)\n",
     "        self.regression_type = str(regression_type).lower()\n",
-    "\n",
-    "        # container for results\n",
-    "        self.results = {}  # type: Dict[str, Dict[str, float]]\n",
-    "\n",
-    "        # add intercept if requested\n",
+    "        self.results = {}\n",
     "        if self.create_intercept:\n",
     "            self.add_intercept()\n",
     "\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Add a column of ones named 'intercept' to self.x if missing.\"\"\"\n",
+    "        \"\"\"Add a column of ones named 'intercept' if requested.\"\"\"\n",
     "        if \"intercept\" not in self.x.columns:\n",
     "            self.x.insert(0, \"intercept\", 1.0)\n",
+    "        return self\n",
+    "\n",
+    "    def _p_value_from_t(self, t_vals, df):\n",
+    "        \"\"\"\n",
+    "        Approximate two-tailed p-value using the normal distribution,\n",
+    "        since SciPy is unavailable.\n",
+    "        \"\"\"\n",
+    "        # For large df, t ~ normal(0,1)\n",
+    "        # p = 2 * (1 - Phi(|t|))\n",
+    "        # Phi(x) ≈ 0.5 * (1 + erf(x / sqrt(2)))\n",
+    "        erf = np.vectorize(lambda z: 2 / np.sqrt(np.pi) * \n",
+    "                           np.array([np.trapz(np.exp(-u**2), u=np.linspace(0, z, 200))])[0])\n",
+    "        Phi = lambda z: 0.5 * (1 + erf(z / np.sqrt(2)))\n",
+    "        return 2 * (1 - Phi(np.abs(t_vals)))\n",
     "\n",
     "    def ols_regression(self):\n",
     "        \"\"\"Estimate OLS and populate self.results.\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
-    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
+    "            raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
     "\n",
-    "        # design matrices\n",
-    "        X = self.x.to_numpy(dtype=float)     # (n, k)\n",
-    "        y = np.asarray(self.y, dtype=float).reshape(-1, 1)  # (n, 1)\n",
+    "        X = self.x.to_numpy(dtype=float)\n",
+    "        y = np.asarray(self.y, dtype=float).reshape(-1, 1)\n",
     "\n",
     "        n, k = X.shape\n",
-    "        if y.shape[0] != n:\n",
-    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
     "        if n <= k:\n",
     "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
-    "        # OLS: beta = (X'X)^(-1) X'y\n",
     "        XtX = X.T @ X\n",
-    "        # use inv; fall back to pinv for safety\n",
     "        try:\n",
     "            XtX_inv = np.linalg.inv(XtX)\n",
     "        except np.linalg.LinAlgError:\n",
     "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
-    "        beta = XtX_inv @ (X.T @ y)                      # (k, 1)\n",
+    "        beta = XtX_inv @ (X.T @ y)\n",
     "        y_hat = X @ beta\n",
     "        resid = y - y_hat\n",
     "        dof = n - k\n",
-    "        sigma2 = float((resid.T @ resid) / dof)         # unbiased estimator\n",
+    "        sigma2 = float((resid.T @ resid) / dof)\n",
     "\n",
     "        var_beta = sigma2 * XtX_inv\n",
-    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)  # (k,1)\n",
+    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
     "\n",
-    "        # t-stats (guard against zero SE)\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
-    "        p_vals = 2 * stats.t.sf(np.abs(t_stats), df=dof)\n",
     "\n",
-    "        # package results in required structure\n",
-    "        out = {}\n",
+    "        # approximate p-values using normal distribution\n",
+    "        p_vals = 2 * (1 - 0.5 * (1 + np.erf(np.abs(t_stats) / np.sqrt(2))))\n",
+    "\n",
+    "        results = {}\n",
     "        for i, col in enumerate(self.x.columns):\n",
-    "            out[col] = {\n",
+    "            results[col] = {\n",
     "                \"coefficient\": float(beta[i, 0]),\n",
     "                \"standard_error\": float(se[i, 0]),\n",
     "                \"t_stat\": float(t_stats[i]),\n",
     "                \"p_value\": float(p_vals[i]),\n",
     "            }\n",
-    "        self.results = out\n",
+    "        self.results = results\n",
     "        return self\n",
     "\n",
     "    def summary(self):\n",
-    "        \"\"\"\n",
-    "        Return a DataFrame with columns:\n",
-    "        'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'\n",
-    "        in that order, preserving column order of self.x.\n",
-    "        \"\"\"\n",
+    "        \"\"\"Return a DataFrame formatted like a regression output table.\"\"\"\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
-    "\n",
     "        rows = []\n",
     "        for var in self.x.columns:\n",
     "            r = self.results[var]\n",
@@ -970,7 +945,10 @@
     "                \"t-statistic\": r[\"t_stat\"],\n",
     "                \"p-value\": r[\"p_value\"],\n",
     "            })\n",
-    "        return pd.DataFrame\n",
+    "        return pd.DataFrame(rows)\n",
+    "\n",
+    "       \n",
+    "      \n",
     "\n",
     "       "
    ]
