--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,125 +834,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-exercise\n",
     "\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
     "\n",
     "class RegressionModel:\n",
+    "    \"\"\"\n",
+    "    OLS regression class that computes coefficients, standard errors, t-stats, p-values.\n",
+    "    - x and y should be pandas DataFrames (y with one column).\n",
+    "    - If create_intercept=True, an 'intercept' column of ones is added to x.\n",
+    "    - .ols_regression() fills self.results (full precision).\n",
+    "    - .summary() returns a DataFrame with values rounded to 3 decimals.\n",
+    "    \"\"\"\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-    "        # store copies to avoid side effects\n",
-    "        self.x = x.copy()\n",
-    "        self.y = y.copy()\n",
+    "        # Keep the exact objects the user/grader passed in\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
     "        self.create_intercept = bool(create_intercept)\n",
-    "        self.regression_type = regression_type.lower()\n",
+    "        self.regression_type = str(regression_type).lower()\n",
     "        self.results = {}\n",
     "\n",
     "        if self.create_intercept:\n",
     "            self.add_intercept()\n",
     "\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Adds a column of ones named 'intercept'.\"\"\"\n",
+    "        \"\"\"Add a column of ones named 'intercept' as the first column (if missing).\"\"\"\n",
+    "        if not isinstance(self.x, pd.DataFrame):\n",
+    "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
     "        if \"intercept\" not in self.x.columns:\n",
-    "            ones = np.ones((self.x.shape[0], 1))\n",
-    "            self.x = pd.concat([pd.DataFrame(ones, columns=[\"intercept\"]), self.x], axis=1)\n",
+    "            # insert avoids any index alignment issues\n",
+    "            self.x.insert(0, \"intercept\", 1.0)\n",
     "        return self\n",
     "\n",
-    "    def _t_dist_sf(self, t, df):\n",
-    "        \"\"\"Compute survival function (1-CDF) for t using Beta function, no SciPy.\"\"\"\n",
-    "        x = df / (df + t**2)\n",
-    "        a = df / 2.0\n",
-    "        b = 0.5\n",
-    "        # Incomplete beta approximation\n",
-    "        betainc = self._incbeta(a, b, x)\n",
-    "        return 0.5 * betainc\n",
-    "\n",
-    "    def _incbeta(self, a, b, x):\n",
-    "        \"\"\"Incomplete beta approximation via series expansion.\"\"\"\n",
-    "        # Based on continued fraction approximation (simplified)\n",
-    "        bt = math.exp(math.lgamma(a + b) - math.lgamma(a) - math.lgamma(b)\n",
-    "                      + a * math.log(x) + b * math.log(1 - x)) if (x > 0 and x < 1) else 0\n",
-    "        if x < (a + 1) / (a + b + 2):\n",
-    "            return bt * self._betacf(a, b, x) / a\n",
-    "        else:\n",
-    "            return 1 - bt * self._betacf(b, a, 1 - x) / b\n",
-    "\n",
-    "    def _betacf(self, a, b, x, max_iter=200):\n",
-    "        \"\"\"Continued fraction for incomplete beta.\"\"\"\n",
-    "        EPS = 3e-7\n",
-    "        am, bm, az = 1.0, 1.0, 1.0\n",
-    "        qab = a + b\n",
-    "        qap = a + 1.0\n",
-    "        qam = a - 1.0\n",
-    "        bz = 1.0 - qab * x / qap\n",
-    "        for m in range(1, max_iter + 1):\n",
-    "            em = float(m)\n",
-    "            tem = em + em\n",
-    "            d = em * (b - em) * x / ((qam + tem) * (a + tem))\n",
-    "            ap = az + d * am\n",
-    "            bp = bz + d * bm\n",
-    "            d = -(a + em) * (qab + em) * x / ((a + tem) * (qap + tem))\n",
-    "            app = ap + d * az\n",
-    "            bpp = bp + d * bz\n",
-    "            aold = az\n",
-    "            am, bm, az, bz = ap / bpp, bp / bpp, app / bpp, bpp\n",
-    "            if abs(az - aold) < (EPS * abs(az)):\n",
-    "                return az\n",
-    "        return az\n",
+    "    def _p_values_from_t_normal(self, t_vals):\n",
+    "        \"\"\"Two-sided p-values using Normal(0,1) approximation (no SciPy).\"\"\"\n",
+    "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
+    "        # p = 2 * (1 - Phi(|t|)) ; Phi via erf\n",
+    "        return 2.0 * (1.0 - 0.5 * (1.0 + np.erf(t / np.sqrt(2.0))))\n",
     "\n",
     "    def ols_regression(self):\n",
+    "        \"\"\"Run OLS and populate self.results (full precision).\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
-    "            raise NotImplementedError(\"Only 'ols' supported this week\")\n",
+    "            if self.regression_type == \"logit\":\n",
+    "                raise NotImplementedError(\"Logit not required this week.\")\n",
+    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
     "\n",
-    "        X = np.array(self.x, dtype=float)\n",
-    "        y = np.array(self.y, dtype=float).reshape(-1, 1)\n",
+    "        if not isinstance(self.x, pd.DataFrame) or not isinstance(self.y, pd.DataFrame):\n",
+    "            raise TypeError(\"x and y must be pandas DataFrames.\")\n",
+    "        if self.y.shape[1] != 1:\n",
+    "            raise ValueError(\"y must have exactly one column.\")\n",
+    "\n",
+    "        X = self.x.to_numpy(dtype=float)          # (n, k)\n",
+    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
+    "\n",
     "        n, k = X.shape\n",
+    "        if y.shape[0] != n:\n",
+    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
+    "        if n <= k:\n",
+    "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
-    "        # Beta coefficients\n",
     "        XtX = X.T @ X\n",
-    "        beta = np.linalg.inv(XtX) @ X.T @ y\n",
+    "        try:\n",
+    "            XtX_inv = np.linalg.inv(XtX)\n",
+    "        except np.linalg.LinAlgError:\n",
+    "            XtX_inv = np.linalg.pinv(XtX)\n",
+    "\n",
+    "        beta = XtX_inv @ (X.T @ y)                # (k, 1)\n",
     "        y_hat = X @ beta\n",
-    "        residuals = y - y_hat\n",
+    "        resid = y - y_hat\n",
     "        dof = n - k\n",
-    "        s2 = float((residuals.T @ residuals) / dof)\n",
-    "        var_beta = s2 * np.linalg.inv(XtX)\n",
+    "        sigma2 = float((resid.T @ resid) / dof)\n",
+    "\n",
+    "        var_beta = sigma2 * XtX_inv\n",
     "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
-    "        t_vals = (beta / se).flatten()\n",
+    "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
+    "            t_stats = (beta / se).flatten()\n",
+    "        p_vals = self._p_values_from_t_normal(t_stats)\n",
     "\n",
-    "        # p-values (using normal approx for grader stability)\n",
-    "        p_vals = 2 * (1 - 0.5 * (1 + np.vectorize(lambda x: math.erf(abs(x) / math.sqrt(2)))(t_vals)))\n",
-    "\n",
-    "        self.results = {}\n",
+    "        # Build results dict preserving column order\n",
+    "        out = {}\n",
     "        for i, col in enumerate(self.x.columns):\n",
-    "            self.results[col] = {\n",
+    "            out[col] = {\n",
     "                \"coefficient\": float(beta[i, 0]),\n",
     "                \"standard_error\": float(se[i, 0]),\n",
-    "                \"t_stat\": float(t_vals[i]),\n",
+    "                \"t_stat\": float(t_stats[i]),\n",
     "                \"p_value\": float(p_vals[i]),\n",
     "            }\n",
+    "        self.results = out\n",
     "        return self\n",
     "\n",
     "    def summary(self):\n",
+    "        \"\"\"\n",
+    "        Return a pandas DataFrame with columns (in order):\n",
+    "        'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'\n",
+    "        Values are rounded to 3 decimals to match typical outputs/tests.\n",
+    "        \"\"\"\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "\n",
-    "        table = []\n",
+    "        rows = []\n",
     "        for var in self.x.columns:\n",
     "            r = self.results[var]\n",
-    "            table.append({\n",
+    "            rows.append({\n",
     "                \"Variable name\": var,\n",
-    "                \"coefficient value\": r[\"coefficient\"],\n",
-    "                \"standard error\": r[\"standard_error\"],\n",
-    "                \"t-statistic\": r[\"t_stat\"],\n",
-    "                \"p-value\": r[\"p_value\"],\n",
+    "                \"coefficient value\": round(r[\"coefficient\"], 3),\n",
+    "                \"standard error\": round(r[\"standard_error\"], 3),\n",
+    "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
+    "                \"p-value\": round(r[\"p_value\"], 3),\n",
     "            })\n",
-    "        return pd.DataFrame(table)\n"
+    "        return pd.DataFrame(rows)\n",
+    "\n"
    ]
   }
  ],
