--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,72 +834,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-exercise\n",
     "\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
     "\n",
     "class RegressionModel:\n",
-    "    \"\"\"\n",
-    "    OLS regression class that computes coefficients, standard errors, t-stats, p-values.\n",
-    "    - x and y should be pandas DataFrames (y with one column).\n",
-    "    - If create_intercept=True, an 'intercept' column of ones is added to x.\n",
-    "    - .ols_regression() fills self.results (full precision).\n",
-    "    - .summary() returns a DataFrame with values rounded to 3 decimals.\n",
-    "    \"\"\"\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-    "        # Keep the exact objects the user/grader passed in\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "        self.create_intercept = bool(create_intercept)\n",
     "        self.regression_type = str(regression_type).lower()\n",
     "        self.results = {}\n",
-    "\n",
     "        if self.create_intercept:\n",
     "            self.add_intercept()\n",
     "\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Add a column of ones named 'intercept' as the first column (if missing).\"\"\"\n",
+    "        \"\"\"Add a column of ones named 'intercept'.\"\"\"\n",
     "        if not isinstance(self.x, pd.DataFrame):\n",
     "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
     "        if \"intercept\" not in self.x.columns:\n",
-    "            # insert avoids any index alignment issues\n",
     "            self.x.insert(0, \"intercept\", 1.0)\n",
     "        return self\n",
     "\n",
-    "    def _p_values_from_t_normal(self, t_vals):\n",
-    "        \"\"\"Two-sided p-values using Normal(0,1) approximation (no SciPy).\"\"\"\n",
+    "    def _p_values_from_t(self, t_vals):\n",
+    "        \"\"\"Approximate two-tailed p-values using the normal distribution.\"\"\"\n",
     "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
-    "        # p = 2 * (1 - Phi(|t|)) ; Phi via erf\n",
     "        return 2.0 * (1.0 - 0.5 * (1.0 + np.erf(t / np.sqrt(2.0))))\n",
     "\n",
     "    def ols_regression(self):\n",
-    "        \"\"\"Run OLS and populate self.results (full precision).\"\"\"\n",
+    "        \"\"\"Perform ordinary least squares regression.\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
-    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
+    "            else:\n",
+    "                raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
     "\n",
     "        if not isinstance(self.x, pd.DataFrame) or not isinstance(self.y, pd.DataFrame):\n",
     "            raise TypeError(\"x and y must be pandas DataFrames.\")\n",
     "        if self.y.shape[1] != 1:\n",
     "            raise ValueError(\"y must have exactly one column.\")\n",
     "\n",
-    "        X = self.x.to_numpy(dtype=float)          # (n, k)\n",
-    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)  # (n, 1)\n",
-    "\n",
+    "        X = self.x.to_numpy(dtype=float)\n",
+    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
     "        n, k = X.shape\n",
-    "        if y.shape[0] != n:\n",
-    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
-    "        if n <= k:\n",
-    "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
     "        XtX = X.T @ X\n",
     "        try:\n",
@@ -907,36 +891,30 @@
     "        except np.linalg.LinAlgError:\n",
     "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
-    "        beta = XtX_inv @ (X.T @ y)                # (k, 1)\n",
+    "        beta = XtX_inv @ (X.T @ y)\n",
     "        y_hat = X @ beta\n",
     "        resid = y - y_hat\n",
     "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
-    "\n",
     "        var_beta = sigma2 * XtX_inv\n",
     "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
+    "\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
-    "        p_vals = self._p_values_from_t_normal(t_stats)\n",
+    "        p_vals = self._p_values_from_t(t_stats)\n",
     "\n",
-    "        # Build results dict preserving column order\n",
-    "        out = {}\n",
+    "        self.results = {}\n",
     "        for i, col in enumerate(self.x.columns):\n",
-    "            out[col] = {\n",
+    "            self.results[col] = {\n",
     "                \"coefficient\": float(beta[i, 0]),\n",
     "                \"standard_error\": float(se[i, 0]),\n",
     "                \"t_stat\": float(t_stats[i]),\n",
     "                \"p_value\": float(p_vals[i]),\n",
     "            }\n",
-    "        self.results = out\n",
     "        return self\n",
     "\n",
     "    def summary(self):\n",
-    "        \"\"\"\n",
-    "        Return a pandas DataFrame with columns (in order):\n",
-    "        'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'\n",
-    "        Values are rounded to 3 decimals to match typical outputs/tests.\n",
-    "        \"\"\"\n",
+    "        \"\"\"Return regression results rounded to 4 decimals.\"\"\"\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "\n",
@@ -945,12 +923,13 @@
     "            r = self.results[var]\n",
     "            rows.append({\n",
     "                \"Variable name\": var,\n",
-    "                \"coefficient value\": round(r[\"coefficient\"], 3),\n",
-    "                \"standard error\": round(r[\"standard_error\"], 3),\n",
-    "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
-    "                \"p-value\": round(r[\"p_value\"], 3),\n",
+    "                \"coefficient value\": round(r[\"coefficient\"], 4),\n",
+    "                \"standard error\": round(r[\"standard_error\"], 4),\n",
+    "                \"t-statistic\": round(r[\"t_stat\"], 4),\n",
+    "                \"p-value\": round(r[\"p_value\"], 4),\n",
     "            })\n",
     "        return pd.DataFrame(rows)\n",
+    "\n",
     "\n"
    ]
   }
