--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -744,10 +744,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bc3d1a1b-5cfc-4b54-b36b-888c245795a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m         Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m norm\n",
+      "\u001b[1;32m      3\u001b[0m norm\u001b[38;5;241m.\u001b[39msf(\u001b[38;5;241m1.96\u001b[39m)\n",
+      "\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import norm\n",
     "\n",
