--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -879,15 +879,14 @@
     "        return self\n",
     "\n",
     "    def _p_values_from_t(self, t_vals):\n",
-    "        \"\"\"Two-sided p-values using Normal(0,1) approximation (no SciPy).\"\"\"\n",
+    "        \"\"\"Two-sided p-values using Normal(0,1) approximation; no SciPy needed.\"\"\"\n",
     "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
-    "        # Use math.erf; vectorize for array input\n",
     "        erf_vec = np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))\n",
-    "        phi_part = 0.5 * (1.0 + erf_vec(t))  # Phi(|t|)\n",
-    "        return 2.0 * (1.0 - phi_part)\n",
+    "        phi = 0.5 * (1.0 + erf_vec(t))\n",
+    "        return 2.0 * (1.0 - phi)\n",
     "\n",
     "    def ols_regression(self):\n",
-    "        \"\"\"Perform OLS and populate self.results (full precision values).\"\"\"\n",
+    "        \"\"\"Perform ordinary least squares regression.\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
@@ -900,7 +899,6 @@
     "\n",
     "        X = self.x.to_numpy(dtype=float)\n",
     "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
-    "\n",
     "        n, k = X.shape\n",
     "        if y.shape[0] != n:\n",
     "            raise ValueError(\"x and y must have the same number of rows.\")\n",
@@ -914,17 +912,14 @@
     "            XtX_inv = np.linalg.pinv(XtX)\n",
     "\n",
     "        beta = XtX_inv @ (X.T @ y)\n",
-    "        y_hat = X @ beta\n",
-    "        resid = y - y_hat\n",
+    "        resid = y - (X @ beta)\n",
     "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
-    "\n",
     "        var_beta = sigma2 * XtX_inv\n",
     "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
     "\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
-    "\n",
     "        p_vals = self._p_values_from_t(t_stats)\n",
     "\n",
     "        self.results = {}\n",
@@ -938,11 +933,7 @@
     "        return self\n",
     "\n",
     "    def summary(self):\n",
-    "        \"\"\"\n",
-    "        Return DataFrame with columns (in order):\n",
-    "        'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'\n",
-    "        Rounded to 4 decimals for display/output tests.\n",
-    "        \"\"\"\n",
+    "        \"\"\"Return results rounded to 4 decimals.\"\"\"\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "\n",
@@ -956,10 +947,7 @@
     "                \"t-statistic\": round(r[\"t_stat\"], 4),\n",
     "                \"p-value\": round(r[\"p_value\"], 4),\n",
     "            })\n",
-    "        return pd.DataFrame(rows)\n",
-    "\n",
-    "\n",
-    "\n"
+    "        return pd.DataFrame(rows)\n"
    ]
   }
  ],
