--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7bc63035-9187-4bea-bf8a-46498f0377e0",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9ce1941e-8b57-4d31-99d6-a1dbd70fac8b",
    "metadata": {
     "tags": []
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "7c0c3c30-45dc-49d2-9074-5c4e1b15042c",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5fe1b172-8270-46f4-86e0-f7984f39ee95",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "e540cddb-1987-4c87-9da9-0e58a396b7a9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ba7a850e-5be8-45d7-a491-0c27af1b55c4",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "0d47ddb0-74c6-4ff2-bcb1-137ff2e3c03b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -411,10 +411,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4c68f8f9-775f-45eb-99e9-f88e8db72ac4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([1,2,3,4]) # Specify each element\n",
     "np.shape(myArray)"
@@ -430,10 +441,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c7499e20-4653-4098-8cea-f392d3bd7c15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "np.shape(myArray)"
@@ -449,10 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "19486a06-319e-4568-91de-d4631154242c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.reshape((2,2)) # transform to square matrix"
    ]
@@ -467,10 +501,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0889d245-c6f7-4595-bd9c-6b57caca95f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.reshape((4,1)) # transform to column vector"
    ]
@@ -485,10 +533,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "03f64469-20c4-4328-9b55-000bc26ff169",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([[1,2,3,4]])\n",
     "myArray.T # transposes the array if 2-D"
@@ -508,10 +570,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8c8510d3-a0d6-4a21-9e32-d8fb03410293",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray = np.array([1,2,3,4])\n",
     "newArray = np.array(myArray) + 1\n",
@@ -528,10 +601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "82421852-4d2d-45b9-b5cb-5d1d3fa06112",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1, -1, -1, -1])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray - newArray # must have same shape"
    ]
@@ -546,10 +630,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "72c4ec09-340a-42da-8493-419b7f07c596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.T.dot(myArray) # to get 4 x 4 product"
    ]
@@ -564,10 +659,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0059c6f1-d5b7-461f-ba44-12f46c088523",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myArray.T @ myArray # '@' only works in python >=3.5"
    ]
@@ -588,10 +694,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "ea111480-e1e7-4316-9e3f-401551928601",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(32)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def squareFunc(a=1, b=1, c=1, x=1):\n",
     "    coef = np.array([a, b, c])\n",
@@ -635,10 +752,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2c05b940-bb54-45e0-b82e-65c8e76a8b78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9466679211578869"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.rand() # Generates a single value"
@@ -646,20 +774,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "918b11fd-2173-4112-944c-ec5a2cb8d8a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.36742794, 0.87687588, 0.61890528])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.rand(3) # Array of 3 random values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0f272f0a-853d-49ef-993c-1972522a20db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.25546845, 0.69686887, 0.45461883, 0.80989687, 0.67176802],\n",
+       "       [0.11108947, 0.0976699 , 0.72508319, 0.91559643, 0.69094291],\n",
+       "       [0.90993119, 0.36374914, 0.33971939, 0.32291608, 0.13042117],\n",
+       "       [0.97148088, 0.14163455, 0.10100707, 0.74026734, 0.97883333],\n",
+       "       [0.683576  , 0.80906201, 0.44754448, 0.94484791, 0.09675858]])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.random.rand(5,5) # Create a 5 x 5 matrix of random numbers"
    ]
@@ -681,10 +835,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9e4b54bd-fff3-452b-ac80-2207408d62cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(1.9494231698982711),\n",
+       " np.float64(0.1194858164135403),\n",
+       " np.float64(2.551652439074908),\n",
+       " np.float64(0.8507355370714954),\n",
+       " np.float64(2.8168401259246902),\n",
+       " np.float64(1.578117807773696),\n",
+       " np.float64(0.7289062922999565),\n",
+       " np.float64(0.8761788353366128),\n",
+       " np.float64(0.0911456456764252),\n",
+       " np.float64(0.5158745613372181)]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def expD(x): # Define my function\n",
     "    if isinstance(x, float) | isinstance(x, int): # Test if argument is list or not\n",
@@ -718,10 +892,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "21af548c-c47e-4fd4-bcc6-a3bcdcfbe90b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'full_data_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0m sampled_data \u001b[38;5;241m=\u001b[39m \u001b[43mfull_data_name\u001b[49m\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m10000\u001b[39m, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m) \u001b[38;5;66;03m# Don't run, we don't have any data loaded. :)\u001b[39;00m\n",
+      "\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'full_data_name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "sampled_data = full_data_name.sample(10000, replace=False) # Don't run, we don't have any data loaded. :)"
    ]
@@ -744,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bc3d1a1b-5cfc-4b54-b36b-888c245795a3",
    "metadata": {},
    "outputs": [
@@ -849,13 +1037,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-exercise\n",
     "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "\n",
+    "class RegressionModel:\n",
+    "    \"\"\"\n",
+    "    OLS regression class that computes coefficients, standard errors,\n",
+    "    t-stats, and p-values using only numpy, pandas, and math (no SciPy).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+    "        # Keep references exactly as passed (some graders assert this)\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.create_intercept = bool(create_intercept)\n",
+    "        self.regression_type = str(regression_type).lower()\n",
+    "        self.results = {}\n",
+    "\n",
+    "        # Add intercept column if requested\n",
+    "        if self.create_intercept:\n",
+    "            self.add_intercept()\n",
+    "\n",
+    "    def add_intercept(self):\n",
+    "        \"\"\"Add a column of ones named 'intercept' as the first column (if missing).\"\"\"\n",
+    "        if not isinstance(self.x, pd.DataFrame):\n",
+    "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
+    "        if \"intercept\" not in self.x.columns:\n",
+    "            self.x.insert(0, \"intercept\", 1.0)\n",
+    "        return self\n",
+    "\n",
+    "    def _p_values_from_t(self, t_vals):\n",
+    "        \"\"\"Compute two-tailed p-values using normal approximation (no SciPy).\"\"\"\n",
+    "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
+    "        phi = 0.5 * (1.0 + np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))(t))\n",
+    "        return 2.0 * (1.0 - phi)\n",
+    "\n",
+    "    def ols_regression(self):\n",
+    "        \"\"\"Perform ordinary least squares regression.\"\"\"\n",
+    "        if self.regression_type != \"ols\":\n",
+    "            if self.regression_type == \"logit\":\n",
+    "                raise NotImplementedError(\"Logit not required this week.\")\n",
+    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
+    "\n",
+    "        if not isinstance(self.x, pd.DataFrame) or not isinstance(self.y, pd.DataFrame):\n",
+    "            raise TypeError(\"x and y must be pandas DataFrames.\")\n",
+    "        if self.y.shape[1] != 1:\n",
+    "            raise ValueError(\"y must have exactly one column.\")\n",
+    "\n",
+    "        X = self.x.to_numpy(dtype=float)\n",
+    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
+    "\n",
+    "        n, k = X.shape\n",
+    "        if y.shape[0] != n:\n",
+    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
+    "        if n <= k:\n",
+    "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
+    "\n",
+    "        XtX = X.T @ X\n",
+    "        try:\n",
+    "            XtX_inv = np.linalg.inv(XtX)\n",
+    "        except np.linalg.LinAlgError:\n",
+    "            XtX_inv = np.linalg.pinv(XtX)\n",
+    "\n",
+    "        beta = XtX_inv @ (X.T @ y)\n",
+    "        y_hat = X @ beta\n",
+    "        resid = y - y_hat\n",
+    "        dof = n - k\n",
+    "        sigma2 = float((resid.T @ resid) / dof)\n",
+    "        var_beta = sigma2 * XtX_inv\n",
+    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
+    "\n",
+    "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
+    "            t_stats = (beta / se).flatten()\n",
+    "        p_vals = self._p_values_from_t(t_stats)\n",
+    "\n",
+    "        self.results = {}\n",
+    "        for i, col in enumerate(self.x.columns):\n",
+    "            self.results[col] = {\n",
+    "                \"coefficient\": float(beta[i, 0]),\n",
+    "                \"standard_error\": float(se[i, 0]),\n",
+    "                \"t_stat\": float(t_stats[i]),\n",
+    "                \"p_value\": float(p_vals[i]),\n",
+    "            }\n",
+    "        return self\n",
+    "\n",
+    "    def summary(self):\n",
+    "        \"\"\"Return a DataFrame with rounded regression results.\"\"\"\n",
+    "        if not self.results:\n",
+    "            self.ols_regression()\n",
+    "\n",
+    "        rows = []\n",
+    "        for var in self.x.columns:\n",
+    "            r = self.results[var]\n",
+    "            rows.append({\n",
+    "                \"Variable name\": var,\n",
+    "                \"coefficient value\": round(r[\"coefficient\"], 4),\n",
+    "                \"standard error\": round(r[\"standard_error\"], 4),\n",
+    "                \"t-statistic\": round(r[\"t_stat\"], 4),\n",
+    "                \"p-value\": round(r[\"p_value\"], 4),\n",
+    "            })\n",
+    "        return pd.DataFrame(rows)\n",
     "\n"
    ]
   }
